# connectm

./: LICENSE  README.md  mypy.ini  pyproject.toml  pytest.ini  requirements.txt
.github/workflows/: run-tests.yml
design/: connectm.py
src/: base.py  bot.py  connectm.py  fakes.py  gui.py  mini-tui.py  mocks.py  tui.py
tests/: test_bot.py  test_connectm.py
